[gd_scene load_steps=20 format=2]

[ext_resource path="res://Ocean.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/MainEnvironment.tres" type="Environment" id=3]
[ext_resource path="res://Assets/grass.tres" type="Material" id=4]
[ext_resource path="res://Assets/fern.tres" type="Material" id=5]
[ext_resource path="res://Floresta.gd" type="Script" id=6]
[ext_resource path="res://Assets/bush.tres" type="Material" id=7]
[ext_resource path="res://Assets/Objects/bushes/02/bush_02.obj" type="ArrayMesh" id=8]
[ext_resource path="res://Assets/Objects/Tree/tree_obj.obj" type="ArrayMesh" id=9]
[ext_resource path="res://Assets/portal_animatedtexture.tres" type="Texture" id=10]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 10 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.7, 0.6, 0.01 )

[sub_resource type="QuadMesh" id=4]
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = ExtResource( 10 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.7, 0.6, 0.01 )

[sub_resource type="QuadMesh" id=7]
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=8]
albedo_texture = ExtResource( 10 )

[sub_resource type="BoxShape" id=9]
extents = Vector3( 30, 25, 10 )

[node name="Foresta" type="Spatial"]
script = ExtResource( 6 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 3 )

[node name="Ocean" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.268547, -0.999992, -0.0176086 )

[node name="mudeater" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="CSGBox" type="CSGBox" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
use_collision = true
width = 100.0
depth = 100.0
material = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="CSGBox2" type="CSGBox" parent="CSGBox"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 50, 10, 0 )
width = 100.0
height = 20.0
material = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CSGBox3" type="CSGBox" parent="CSGBox"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 10, -50 )
width = 100.0
height = 20.0
material = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CSGBox4" type="CSGBox" parent="CSGBox"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -50, 10, 0 )
width = 100.0
height = 20.0
material = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CSGBox5" type="CSGBox" parent="CSGBox"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 27.5482, 10, 0 )
visible = false
width = 45.0
height = 20.0
material = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CSGBox6" type="CSGBox" parent="CSGBox"]
transform = Transform( 1, 0, -1.74846e-07, 0, 1, 0, 1.74846e-07, 0, 1, -28.6728, 10, -4.37114e-06 )
visible = false
width = 45.0
height = 20.0
material = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CSGBox1" type="CSGBox" parent="CSGBox"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 10, 50 )
width = 100.0
height = 20.0
material = ExtResource( 5 )

[node name="tree_obj" type="MeshInstance" parent="."]
transform = Transform( -8.74228e-09, 0, -0.2, 0, 0.2, 0, 0.2, 0, -8.74228e-09, -80, 1, -68 )
mesh = ExtResource( 9 )
material/0 = null
material/1 = null
material/2 = null
__meta__ = {
"_edit_lock_": true
}

[node name="tree_obj" type="MeshInstance" parent="tree_obj"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 220, 1, 0 )
mesh = ExtResource( 9 )
material/0 = null
material/1 = null
material/2 = null

[node name="portal" type="CSGMesh" parent="tree_obj"]
transform = Transform( -50, 0, -4.37114e-06, 0, 50, 0, 4.37114e-06, 0, -50, 99, 56, 10 )
mesh = SubResource( 1 )
material = SubResource( 2 )

[node name="areaFloresta0" type="Area" parent="tree_obj/portal"]
transform = Transform( 1, 0, -7.10543e-15, 0, 1, 0, 7.10543e-15, 0, 1, 0, 0, -0.00973892 )

[node name="CollisionShape" type="CollisionShape" parent="tree_obj/portal/areaFloresta0"]
transform = Transform( 1, 0, -2.13163e-14, 0, 1, 0, 2.13163e-14, 0, 1, 0, -0.173093, 0.109497 )
shape = SubResource( 3 )

[node name="bush_02" type="MeshInstance" parent="."]
transform = Transform( -8.74228e-09, 0, -0.2, 0, 0.2, 0, 0.2, 0, -8.74228e-09, 80, 0, 33 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="bush_02" type="MeshInstance" parent="bush_02"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 222.572, -0.580931, 0.0158691 )
mesh = ExtResource( 8 )
material/0 = ExtResource( 7 )

[node name="portal" type="CSGMesh" parent="bush_02"]
transform = Transform( 50, 0, 0, 0, 50, 0, 0, 0, 50, 114.831, 68.4858, -7.97946 )
mesh = SubResource( 4 )
material = SubResource( 5 )

[node name="areaBushes" type="Area" parent="bush_02/portal"]

[node name="CollisionShape" type="CollisionShape" parent="bush_02/portal/areaBushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0450583 )
shape = SubResource( 6 )

[node name="Position" type="Position3D" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -74, 2, -48 )

[node name="Position2" type="Position3D" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -75, 2, 48 )

[node name="Position3" type="Position3D" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 72, 2, 55 )

[node name="tree_obj2" type="MeshInstance" parent="."]
transform = Transform( -8.74228e-09, 0, 0.2, 0, 0.2, 0, -0.2, 0, -8.74228e-09, -88.492, 1, 68.5346 )
mesh = ExtResource( 9 )
material/0 = null
material/1 = null
material/2 = null

[node name="tree_obj" type="MeshInstance" parent="tree_obj2"]
transform = Transform( 1, 0, -1.42109e-14, 0, 1, 0, 1.42109e-14, 0, 1, 220, 1, -0.00012207 )
mesh = ExtResource( 9 )
material/0 = null
material/1 = null
material/2 = null

[node name="portal" type="CSGMesh" parent="tree_obj2"]
transform = Transform( 50, 0, -1.36424e-12, 0, 50, 0, 1.36424e-12, 0, 50, 100.383, 54.9525, 0.737946 )
mesh = SubResource( 7 )
material = SubResource( 8 )

[node name="areaFloresta" type="Area" parent="tree_obj2/portal"]
transform = Transform( 0.02, 0, 4.996e-16, 0, 0.02, 0, -4.996e-16, 0, 0.02, -0.00765991, -0.29905, -0.0147591 )

[node name="CollisionShape" type="CollisionShape" parent="tree_obj2/portal/areaFloresta"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7.07146, 0 )
shape = SubResource( 9 )

[connection signal="body_entered" from="tree_obj/portal/areaFloresta0" to="." method="_on_areaFloresta0_body_entered"]
[connection signal="body_entered" from="bush_02/portal/areaBushes" to="." method="_on_areaBushes_body_entered"]
[connection signal="body_entered" from="tree_obj2/portal/areaFloresta" to="." method="_on_areaFloresta1_body_entered"]
